--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,69 @@
-input[type="button"] {
-    width: 100%;
-    padding: 20px 40px;
-    font-size: 24px;
-    font-weight:bold;
-    border: none;
-    border-radius: 5px;
-  }
-  h1{
-   margin-left: 400px;
-   color: black;
-  }
- .box{
-     width:100%;
-     height:3em;
-     background-color:white;
-     border:0.3px solid black ;
-     color: black;
-     border-radius: 5px;
-     font-size: larger;
-     font-weight:bolder;
-  }
-  .calculator{
-     border:1px solid black;
-     height: 390px;
-     width: 420px;
-     padding: 20px;
-     margin: auto;
-     border-radius: 0.5em;
-     background-color:black;
-     border-collapse: collapse;
-  }
-  .main{
-   background-color:#ff0066;
+* {
+    box-sizing: border-box;
   }
   
+  .container {
+    background:violet;
+    padding:25px;
+    max-width:760px;
+    margin:25px auto;
+    overflow:hidden;
+    border-radius:10px;
+    border:4px solid #b1c9bb;
+    font-family: sans-serif;
+  }
+  
+  h1, h2 {
+    margin:0;
+    text-align:center;
+    text-transform:uppercase;
+    color:#ff0066;
+   
+  }
+  
+  h2 {
+    font-size:20px;
+    text-align:center;
+    border-bottom:1px solid #b1c9bb;
+    padding: 0 0 10px;
+    color:blue;
+      
+  }
+  
+  .new-task-container {
+    text-align:center;
+  }
+  
+  .box {
+    padding:10px 15px;
+    border:2px solid #b1c9bb;
+    border-radius:5px;
+    background:yellow;
+    margin:15px 0;
+  }
+  
+  
+  .todo-list {
+    float:left;
+    width:46%;
+  }
+  
+  .complete-list {
+    float:right;
+    width:46%;
+  }
+  
+  ul {
+    list-style:none;
+    padding:0;
+    margin:0;
+  }
+  
+  li{
+    padding:10px;
+    border-bottom:1px dotted #CCC;
+  }
+  
+  .delete {
+    float:right;
+  }
