--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,33 @@
-* {
-    box-sizing: border-box;
-  }
+body {  
+    background-color:yellow;  
+    margin: 20%;  
+}  
+#title {  
+    text-align: center;  
+    text-shadow: 5px 5px 10px white;  
+    font-size: 8vh;  
+}  
+img {  
+    display: inline-block;  
+    width: 100%;  
+}     
+#caption {  
+    font-size: 19px;  
+    font-family:sans-serif;  
+    color: black;  
+}  
+div#tribute-data {  
+    background-color:#ff0066;  
+    box-shadow: 20px 20px 20px #96c996;  
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    padding: 25px 25px;  
+    margin: 11px;  
+    margin-top: 50px;  
+}  
+h1.title-vk {  
+    font-size: 35px;  
+    color: white;  
+    text-align: center;  
+    text-shadow: 5px 6px 10px black;  
+}     
   
-  .container {
-    background:violet;
-    padding:25px;
-    max-width:760px;
-    margin:25px auto;
-    overflow:hidden;
-    border-radius:10px;
-    border:4px solid #b1c9bb;
-    font-family: sans-serif;
-  }
-  
-  h1, h2 {
-    margin:0;
-    text-align:center;
-    text-transform:uppercase;
-    color:#ff0066;
-   
-  }
-  
-  h2 {
-    font-size:20px;
-    text-align:center;
-    border-bottom:1px solid #b1c9bb;
-    padding: 0 0 10px;
-    color:blue;
-      
-  }
-  
-  .new-task-container {
-    text-align:center;
-  }
-  
-  .box {
-    padding:10px 15px;
-    border:2px solid #b1c9bb;
-    border-radius:5px;
-    background:yellow;
-    margin:15px 0;
-  }
-  
-  
-  .todo-list {
-    float:left;
-    width:46%;
-  }
-  
-  .complete-list {
-    float:right;
-    width:46%;
-  }
-  
-  ul {
-    list-style:none;
-    padding:0;
-    margin:0;
-  }
-  
-  li{
-    padding:10px;
-    border-bottom:1px dotted #CCC;
-  }
-  
-  .delete {
-    float:right;
-  }
