--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,135 @@
-body {  
-    background-color:yellow;  
-    margin: 20%;  
-}  
-#title {  
-    text-align: center;  
-    text-shadow: 5px 5px 10px white;  
-    font-size: 8vh;  
-}  
-img {  
-    display: inline-block;  
-    width: 100%;  
-}     
-#caption {  
-    font-size: 19px;  
-    font-family:sans-serif;  
-    color: black;  
-}  
-div#tribute-data {  
-    background-color:#ff0066;  
-    box-shadow: 20px 20px 20px #96c996;  
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
-    padding: 25px 25px;  
-    margin: 11px;  
-    margin-top: 50px;  
-}  
-h1.title-vk {  
-    font-size: 35px;  
-    color: white;  
-    text-align: center;  
-    text-shadow: 5px 6px 10px black;  
-}     
-  
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    height: 100vh;
+    background-color:lightcoral;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.container {
+    background-color: yellowgreen;
+    width: 510px;
+    padding: 5px 25px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+.container h1 {
+    font-family: 'Lobster', cursive;
+    font-size: 33px;
+    font-weight: 700;
+    text-align: center;
+    user-select: none;
+    letter-spacing: 1px;
+    color:blue;
+}
+.inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.inputs:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.inpts1 {
+    display: flex;
+    gap: 10px;
+}
+.inpts1 div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+#small {
+    font-size: 13px;
+}
+#result,
+#inputValue {
+    height: 40px;
+    font-size: 25px;
+    border: 1px solid black;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    padding: 0 10px;
+    font-weight: 600;
+   
+}
+#result:focus,
+#inputValue:focus {
+    height: 40px;
+    font-size: 25px;
+    border: 1px solid rgb(130, 130, 255);
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    padding: 0 10px;
+}
+#button{
+    height: 45px;
+    font-size: 20px;
+    font-weight: 600;
+    background-color:#ff0066;
+    color:white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.results1 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+#type1,
+#type2 {
+    height: 41px;
+    font-size: 25px;
+    border: 1px solid gray;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    padding: 0 10px;
+}
+#type1:focus,
+#type2:focus {
+    height: 41px;
+    font-size: 25px;
+    border: 1px solid rgb(130, 130, 255);
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+    padding: 0 10px;
+}
+label {
+    font-size: 17px;
+    font-family: -webkit-pictograph;
+    color: black;
+}
+@media only screen and (max-width: 575px) {
+    .container {
+        transform: scale(0.95);
+    }
+}
+@media only screen and (max-width: 425px) {
+    .container {
+        transform: scale(0.9);
+    }
+}
+@media only screen and (max-width: 340px) {
+    .container {
+        transform: scale(0.8);
+    }
+}
